{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "62b2909a-eac9-4573-b384-da1c9fb2e934",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "147559ac-8046-4602-b4ac-faa840e45b69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "dee36637-86d4-4f3e-b7cd-34a4da4a40c9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a75b0543-79b1-4fa1-b264-6a5060feec92",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "142749b5-296f-47fe-a9d7-78184b005af1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player Actions",
            "id": "239acc9d-a98a-401b-a415-3f23b19ca10b",
            "actions": [
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "6662ec50-0090-4603-8f38-b0071bc99cc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleEquipment",
                    "type": "Button",
                    "id": "7b4341fa-4835-4883-80c2-98249ef296f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1b5cc9fb-c6f1-42ba-9c7b-b7c1e46588b1",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aca7f52d-a440-4aae-bd18-e40b72fc658a",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleEquipment",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}